--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   background: #fcfdff;
   /* background-image: url("https://res.cloudinary.com/dmmumy2b1/image/upload/v1669579370/Beautyverse/4877182_dkkrni.jpg"); */
   box-sizing: border-box;
-  /* overflow: hidden; */
+  overflow: hidden;
   overflow-x: hidden;
   overflow-y: 'visible';
   user-select: none;
@@ -17,7 +17,7 @@ body {
   -ms-user-select: none;
   height: 100%;
   width: 100%;
-  overscroll-behavior-y: contain;
+  overscroll-behavior: none;
 }
 
 div {
